deploy: 7de9bcf927797c1e5d286a555bd5ad8984f32e9a

--- a/data/attachments/a56c787192f7e1af.html
+++ b/data/attachments/a56c787192f7e1af.html
@@ -42,7 +42,7 @@
     &quot;private_gists&quot;: 0,
     &quot;total_private_repos&quot;: 0,
     &quot;owned_private_repos&quot;: 0,
-    &quot;disk_usage&quot;: 14248,
+    &quot;disk_usage&quot;: 14258,
     &quot;collaborators&quot;: 0,
     &quot;two_factor_authentication&quot;: false,
     &quot;plan&quot;: {
@@ -73,16 +73,16 @@
         <div>Content-Encoding: gzip</div>
         <div>X-XSS-Protection: 0</div>
         <div>Content-Type: application/json; charset=utf-8</div>
-        <div>X-GitHub-Request-Id: 7C00:193C1C:226AF2F:7BC2242:68DA6C7E</div>
+        <div>X-GitHub-Request-Id: DA00:2306F0:FEC5C54:10505D38:68DA9351</div>
         <div>Transfer-Encoding: chunked</div>
         <div>X-Content-Type-Options: nosniff</div>
-        <div>X-RateLimit-Reset: 1759148686</div>
-        <div>Date: Mon, 29 Sep 2025 11:24:46 GMT</div>
+        <div>X-RateLimit-Reset: 1759158626</div>
+        <div>Date: Mon, 29 Sep 2025 14:10:26 GMT</div>
         <div>Cache-Control: private, max-age=60, s-maxage=60</div>
-        <div>ETag: W/&quot;c9fc3dc31e84220ed0c3f8296271450d14871ef764a2c10ccc5ed68c180d04c7&quot;</div>
+        <div>ETag: W/&quot;0dcc9220962e0b333725995f339ad3c883b9daba3beee1cfff840b7a6f57da34&quot;</div>
         <div>Vary: Accept, Authorization, Cookie, X-GitHub-OTP,Accept-Encoding, Accept, X-Requested-With</div>
         <div>X-RateLimit-Limit: 5000</div>
-        <div>X-OAuth-Scopes: delete:packages, delete_repo, repo, user, workflow, write:discussion, write:network_configurations, write:packages</div>
+        <div>X-OAuth-Scopes: admin:org, delete:packages, delete_repo, project, repo, user, workflow, write:discussion, write:network_configurations, write:packages</div>
         <div>github-authentication-token-expiration: 2025-12-28 07:12:13 UTC</div>
 </div>
 
