--- a/data/attachments/4d609d46c4256a8c.html
+++ b/data/attachments/4d609d46c4256a8c.html
@@ -42,7 +42,7 @@
     &quot;private_gists&quot;: 0,
     &quot;total_private_repos&quot;: 0,
     &quot;owned_private_repos&quot;: 0,
-    &quot;disk_usage&quot;: 14258,
+    &quot;disk_usage&quot;: 14269,
     &quot;collaborators&quot;: 0,
     &quot;two_factor_authentication&quot;: false,
     &quot;plan&quot;: {
@@ -73,13 +73,13 @@
         <div>Content-Encoding: gzip</div>
         <div>X-XSS-Protection: 0</div>
         <div>Content-Type: application/json; charset=utf-8</div>
-        <div>X-GitHub-Request-Id: DA00:2306F0:FEC5C54:10505D38:68DA9351</div>
+        <div>X-GitHub-Request-Id: 8028:2F4CD0:19158B9:59BC24F:68DABB32</div>
         <div>Transfer-Encoding: chunked</div>
         <div>X-Content-Type-Options: nosniff</div>
-        <div>X-RateLimit-Reset: 1759158626</div>
-        <div>Date: Mon, 29 Sep 2025 14:10:26 GMT</div>
+        <div>X-RateLimit-Reset: 1759168834</div>
+        <div>Date: Mon, 29 Sep 2025 17:00:34 GMT</div>
         <div>Cache-Control: private, max-age=60, s-maxage=60</div>
-        <div>ETag: W/&quot;0dcc9220962e0b333725995f339ad3c883b9daba3beee1cfff840b7a6f57da34&quot;</div>
+        <div>ETag: W/&quot;2cf4bc84fbf275e474ea028efce0c093b253f2bf4f9d6df6b68b37d2362ee345&quot;</div>
         <div>Vary: Accept, Authorization, Cookie, X-GitHub-OTP,Accept-Encoding, Accept, X-Requested-With</div>
         <div>X-RateLimit-Limit: 5000</div>
         <div>X-OAuth-Scopes: admin:org, delete:packages, delete_repo, project, repo, user, workflow, write:discussion, write:network_configurations, write:packages</div>
