--- a/data/attachments/93b1a833204ff8f7.html
+++ b/data/attachments/93b1a833204ff8f7.html
@@ -42,7 +42,7 @@
     &quot;private_gists&quot;: 0,
     &quot;total_private_repos&quot;: 0,
     &quot;owned_private_repos&quot;: 0,
-    &quot;disk_usage&quot;: 14269,
+    &quot;disk_usage&quot;: 14278,
     &quot;collaborators&quot;: 0,
     &quot;two_factor_authentication&quot;: false,
     &quot;plan&quot;: {
@@ -59,7 +59,7 @@
         <div>X-Accepted-OAuth-Scopes: </div>
         <div>X-RateLimit-Resource: core</div>
         <div>Server: github.com</div>
-        <div>X-RateLimit-Used: 1</div>
+        <div>X-RateLimit-Used: 3</div>
         <div>Access-Control-Allow-Origin: *</div>
         <div>Last-Modified: Sat, 20 Sep 2025 13:50:59 GMT</div>
         <div>x-github-api-version-selected: 2022-11-28</div>
@@ -67,19 +67,19 @@
         <div>Referrer-Policy: origin-when-cross-origin, strict-origin-when-cross-origin</div>
         <div>Access-Control-Expose-Headers: ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Used, X-RateLimit-Resource, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, X-GitHub-SSO, X-GitHub-Request-Id, Deprecation, Sunset</div>
         <div>Strict-Transport-Security: max-age=31536000; includeSubdomains; preload</div>
-        <div>X-RateLimit-Remaining: 4999</div>
+        <div>X-RateLimit-Remaining: 4997</div>
         <div>X-GitHub-Media-Type: github.v3; format=json</div>
         <div>Content-Security-Policy: default-src &#39;none&#39;</div>
         <div>Content-Encoding: gzip</div>
         <div>X-XSS-Protection: 0</div>
         <div>Content-Type: application/json; charset=utf-8</div>
-        <div>X-GitHub-Request-Id: 8028:2F4CD0:19158B9:59BC24F:68DABB32</div>
+        <div>X-GitHub-Request-Id: 8400:1EC9D3:29F3E4D:2ACE715:68DE0AD2</div>
         <div>Transfer-Encoding: chunked</div>
         <div>X-Content-Type-Options: nosniff</div>
-        <div>X-RateLimit-Reset: 1759168834</div>
-        <div>Date: Mon, 29 Sep 2025 17:00:34 GMT</div>
+        <div>X-RateLimit-Reset: 1759385152</div>
+        <div>Date: Thu, 02 Oct 2025 05:17:07 GMT</div>
         <div>Cache-Control: private, max-age=60, s-maxage=60</div>
-        <div>ETag: W/&quot;2cf4bc84fbf275e474ea028efce0c093b253f2bf4f9d6df6b68b37d2362ee345&quot;</div>
+        <div>ETag: W/&quot;db6b87c8b7c6f582b2b182e7d04def1ad4e9c85b2c04de0ffad98399cfb24d21&quot;</div>
         <div>Vary: Accept, Authorization, Cookie, X-GitHub-OTP,Accept-Encoding, Accept, X-Requested-With</div>
         <div>X-RateLimit-Limit: 5000</div>
         <div>X-OAuth-Scopes: admin:org, delete:packages, delete_repo, project, repo, user, workflow, write:discussion, write:network_configurations, write:packages</div>
