--- a/data/attachments/b545153ed39871f.html
+++ b/data/attachments/b545153ed39871f.html
@@ -59,7 +59,7 @@
         <div>X-Accepted-OAuth-Scopes: </div>
         <div>X-RateLimit-Resource: core</div>
         <div>Server: github.com</div>
-        <div>X-RateLimit-Used: 3</div>
+        <div>X-RateLimit-Used: 5</div>
         <div>Access-Control-Allow-Origin: *</div>
         <div>Last-Modified: Sat, 20 Sep 2025 13:50:59 GMT</div>
         <div>x-github-api-version-selected: 2022-11-28</div>
@@ -67,17 +67,17 @@
         <div>Referrer-Policy: origin-when-cross-origin, strict-origin-when-cross-origin</div>
         <div>Access-Control-Expose-Headers: ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Used, X-RateLimit-Resource, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, X-GitHub-SSO, X-GitHub-Request-Id, Deprecation, Sunset</div>
         <div>Strict-Transport-Security: max-age=31536000; includeSubdomains; preload</div>
-        <div>X-RateLimit-Remaining: 4997</div>
+        <div>X-RateLimit-Remaining: 4995</div>
         <div>X-GitHub-Media-Type: github.v3; format=json</div>
         <div>Content-Security-Policy: default-src &#39;none&#39;</div>
         <div>Content-Encoding: gzip</div>
         <div>X-XSS-Protection: 0</div>
         <div>Content-Type: application/json; charset=utf-8</div>
-        <div>X-GitHub-Request-Id: 3400:3D763E:7EC9AA:810C1C:68DEA90E</div>
+        <div>X-GitHub-Request-Id: F420:2E9038:58DA36:13B3206:68DEAAF1</div>
         <div>Transfer-Encoding: chunked</div>
         <div>X-Content-Type-Options: nosniff</div>
         <div>X-RateLimit-Reset: 1759425959</div>
-        <div>Date: Thu, 02 Oct 2025 16:32:14 GMT</div>
+        <div>Date: Thu, 02 Oct 2025 16:40:17 GMT</div>
         <div>Cache-Control: private, max-age=60, s-maxage=60</div>
         <div>ETag: W/&quot;b13f968879d4da3ed1b0f9e7d4c524f433508bb1ebc9bde7720a1503b1a9d52b&quot;</div>
         <div>Vary: Accept, Authorization, Cookie, X-GitHub-OTP,Accept-Encoding, Accept, X-Requested-With</div>
